--- a/app/views/quarters/edit.html.erb
+++ b/app/views/quarters/edit.html.erb
@@ -1,10 +1,28 @@
 <% content_for :title, "Edit Quarter" %>
 
-<h1>Editing quarter</h1>
-
-<%= render "form", quarter: @quarter %>
-
-<div>
-  <%= link_to "Show this quarter", @quarter %> |
-  <%= link_to "Back to quarters", quarters_path %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header bg-white">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center gap-3">
+              <h1 class="h3 mb-0">Edit Quarter</h1>
+              <% if @quarter.is_archived %>
+                <span class="badge bg-secondary">Archived</span>
+              <% else %>
+                <span class="badge bg-success">Active</span>
+              <% end %>
+            </div>
+            <%= link_to quarter_path(@quarter), class: "btn btn-outline-secondary btn-sm" do %>
+              <i class="bi bi-arrow-left"></i> Back to Quarter
+            <% end %>
+          </div>
+        </div>
+        <div class="card-body">
+          <%= render "form", quarter: @quarter %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div> 
