--- a/app/views/themes/edit.html.erb
+++ b/app/views/themes/edit.html.erb
@@ -1,12 +1,28 @@
-<% content_for :title, "Editing theme" %>
+<% content_for :title, "Edit Theme" %>
 
-<h1>Editing theme</h1>
-
-<%= render "form", theme: @theme %>
-
-<br>
-
-<div>
-  <%= link_to "Show this theme", @theme %> |
-  <%= link_to "Back to themes", themes_path %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header bg-white">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center gap-3">
+              <h1 class="h3 mb-0">Edit Theme</h1>
+              <% if @theme.is_archived %>
+                <span class="badge bg-secondary">Archived</span>
+              <% else %>
+                <span class="badge bg-success">Active</span>
+              <% end %>
+            </div>
+            <%= link_to theme_path(@theme), class: "btn btn-outline-secondary btn-sm" do %>
+              <i class="bi bi-arrow-left"></i> Back to Theme
+            <% end %>
+          </div>
+        </div>
+        <div class="card-body">
+          <%= render "form", theme: @theme %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
