--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -1,9 +1,8 @@
-<%= form_with(model: grade) do |form| %>
+<%= form_with(model: grade, class: "needs-validation", data: { turbo: false }) do |form| %>
   <% if grade.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(grade.errors.count, "error") %> prohibited this grade from being saved:</h2>
-
-      <ul>
+    <div class="alert alert-danger">
+      <h4 class="alert-heading"><%= pluralize(grade.errors.count, "error") %> prohibited this grade from being saved:</h4>
+      <ul class="mb-0">
         <% grade.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
@@ -11,37 +10,80 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :student_id, style: "display: block" %>
-    <%= form.text_field :student_id %>
-  </div>
+  <div class="row g-3">
+    <div class="col-md-6">
+      <div class="form-floating">
+        <%= form.collection_select :student_id, 
+            Student.not_archived.includes(:user), 
+            :id, 
+            ->(s) { s.user.full_name }, 
+            { prompt: "Select student" },
+            { class: "form-select" } %>
+        <%= form.label :student_id, "Student" %>
+      </div>
+    </div>
 
-  <div>
-    <%= form.label :teacher_id, style: "display: block" %>
-    <%= form.text_field :teacher_id %>
-  </div>
+    <div class="col-md-6">
+      <div class="form-floating">
+        <%= form.collection_select :teacher_id, 
+            Teacher.not_archived.includes(:user), 
+            :id, 
+            ->(t) { t.user.full_name }, 
+            { prompt: "Select teacher" },
+            { class: "form-select" } %>
+        <%= form.label :teacher_id, "Teacher" %>
+      </div>
+    </div>
 
-  <div>
-    <%= form.label :course_id, style: "display: block" %>
-    <%= form.text_field :course_id %>
-  </div>
+    <div class="col-md-6">
+      <div class="form-floating">
+        <%= form.collection_select :course_id, 
+            Course.not_archived.includes(:theme), 
+            :id, 
+            ->(c) { "#{c.theme.module_name} (#{c.classroom.name})" }, 
+            { prompt: "Select course" },
+            { class: "form-select" } %>
+        <%= form.label :course_id, "Course" %>
+      </div>
+    </div>
 
-  <div>
-    <%= form.label :grade, style: "display: block" %>
-    <%= form.text_field :grade %>
-  </div>
+    <div class="col-md-6">
+      <div class="form-floating">
+        <%= form.number_field :grade, 
+            class: "form-control", 
+            placeholder: "Grade",
+            step: "0.1",
+            min: "1",
+            max: "6" %>
+        <%= form.label :grade, "Grade" %>
+      </div>
+    </div>
 
-  <div>
-    <%= form.label :grading_date, style: "display: block" %>
-    <%= form.date_field :grading_date %>
-  </div>
+    <div class="col-md-6">
+      <div class="form-floating">
+        <%= form.date_field :grading_date, 
+            class: "form-control",
+            value: Date.current %>
+        <%= form.label :grading_date, "Grading Date" %>
+      </div>
+    </div>
 
-  <div>
-    <%= form.label :is_archived, style: "display: block" %>
-    <%= form.checkbox :is_archived %>
-  </div>
+    <% if grade.persisted? %>
+      <div class="col-md-6">
+        <div class="form-check form-switch">
+          <%= form.check_box :is_archived, class: "form-check-input" %>
+          <%= form.label :is_archived, "Archive Grade", class: "form-check-label" %>
+        </div>
+      </div>
+    <% end %>
 
-  <div>
-    <%= form.submit %>
+    <div class="col-12">
+      <div class="d-flex gap-2">
+        <%= form.submit class: "btn btn-primary" do %>
+          <i class="bi bi-save"></i> Save Grade
+        <% end %>
+        <%= link_to "Cancel", grades_path, class: "btn btn-outline-secondary" %>
+      </div>
+    </div>
   </div>
 <% end %>
