--- a/app/views/grades/edit.html.erb
+++ b/app/views/grades/edit.html.erb
@@ -1,12 +1,28 @@
-<% content_for :title, "Editing grade" %>
+<% content_for :title, "Edit Grade" %>
 
-<h1>Editing grade</h1>
-
-<%= render "form", grade: @grade %>
-
-<br>
-
-<div>
-  <%= link_to "Show this grade", @grade %> |
-  <%= link_to "Back to grades", grades_path %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header bg-white">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center gap-3">
+              <h1 class="h3 mb-0">Edit Grade</h1>
+              <% if @grade.is_archived %>
+                <span class="badge bg-secondary">Archived</span>
+              <% else %>
+                <span class="badge bg-success">Active</span>
+              <% end %>
+            </div>
+            <%= link_to grade_path(@grade), class: "btn btn-outline-secondary btn-sm" do %>
+              <i class="bi bi-arrow-left"></i> Back to Grade
+            <% end %>
+          </div>
+        </div>
+        <div class="card-body">
+          <%= render "form", grade: @grade %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
