--- a/app/views/grades/new.html.erb
+++ b/app/views/grades/new.html.erb
@@ -1,11 +1,21 @@
-<% content_for :title, "New grade" %>
+<% content_for :title, "New Grade" %>
 
-<h1>New grade</h1>
-
-<%= render "form", grade: @grade %>
-
-<br>
-
-<div>
-  <%= link_to "Back to grades", grades_path %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header bg-white">
+          <div class="d-flex justify-content-between align-items-center">
+            <h1 class="h3 mb-0">New Grade</h1>
+            <%= link_to grades_path, class: "btn btn-outline-secondary btn-sm" do %>
+              <i class="bi bi-arrow-left"></i> Back to Grades
+            <% end %>
+          </div>
+        </div>
+        <div class="card-body">
+          <%= render "form", grade: @grade %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
