--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,12 +1,28 @@
-<% content_for :title, "Editing student" %>
+<% content_for :title, "Edit Student" %>
 
-<h1>Editing student</h1>
-
-<%= render "form", student: @student %>
-
-<br>
-
-<div>
-  <%= link_to "Show this student", @student %> |
-  <%= link_to "Back to students", students_path %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header bg-white">
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center gap-3">
+              <h1 class="h3 mb-0">Edit Student</h1>
+              <% if @student.is_archived %>
+                <span class="badge bg-secondary">Archived</span>
+              <% else %>
+                <span class="badge bg-success">Active</span>
+              <% end %>
+            </div>
+            <%= link_to student_path(@student), class: "btn btn-outline-secondary btn-sm" do %>
+              <i class="bi bi-arrow-left"></i> Back to Student
+            <% end %>
+          </div>
+        </div>
+        <div class="card-body">
+          <%= render "form", student: @student %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
