--- a/app/views/class_types/_form.html.erb
+++ b/app/views/class_types/_form.html.erb
@@ -1,9 +1,8 @@
-<%= form_with(model: class_type) do |form| %>
+<%= form_with(model: class_type, class: "needs-validation", data: { turbo: false }) do |form| %>
   <% if class_type.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(class_type.errors.count, "error") %> prohibited this class_type from being saved:</h2>
-
-      <ul>
+    <div class="alert alert-danger">
+      <h4 class="alert-heading"><%= pluralize(class_type.errors.count, "error") %> prohibited this class type from being saved:</h4>
+      <ul class="mb-0">
         <% class_type.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
@@ -11,22 +10,37 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
+  <div class="row g-3">
+    <div class="col-md-6">
+      <div class="form-floating">
+        <%= form.text_field :name, class: "form-control", placeholder: "Name" %>
+        <%= form.label :name %>
+      </div>
+    </div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description %>
-  </div>
+    <div class="col-md-6">
+      <div class="form-floating">
+        <%= form.text_area :description, class: "form-control", placeholder: "Description", style: "height: 100px" %>
+        <%= form.label :description %>
+      </div>
+    </div>
 
-  <div>
-    <%= form.label :is_archived, style: "display: block" %>
-    <%= form.check_box :is_archived %>
-  </div>
+    <% if class_type.persisted? %>
+      <div class="col-md-6">
+        <div class="form-check form-switch">
+          <%= form.check_box :is_archived, class: "form-check-input" %>
+          <%= form.label :is_archived, "Archive Class Type", class: "form-check-label" %>
+        </div>
+      </div>
+    <% end %>
 
-  <div>
-    <%= form.submit %>
+    <div class="col-12">
+      <div class="d-flex gap-2">
+        <%= form.submit class: "btn btn-primary" do %>
+          <i class="bi bi-save"></i> Save Class Type
+        <% end %>
+        <%= link_to "Cancel", class_types_path, class: "btn btn-outline-secondary" %>
+      </div>
+    </div>
   </div>
 <% end %>
