--- a/app/views/class_types/new.html.erb
+++ b/app/views/class_types/new.html.erb
@@ -1,11 +1,21 @@
-<% content_for :title, "New class type" %>
+<% content_for :title, "New Class Type" %>
 
-<h1>New class type</h1>
-
-<%= render "form", class_type: @class_type %>
-
-<br>
-
-<div>
-  <%= link_to "Back to class types", class_types_path %>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header bg-white">
+          <div class="d-flex justify-content-between align-items-center">
+            <h1 class="h3 mb-0">New Class Type</h1>
+            <%= link_to class_types_path, class: "btn btn-outline-secondary btn-sm" do %>
+              <i class="bi bi-arrow-left"></i> Back to Class Types
+            <% end %>
+          </div>
+        </div>
+        <div class="card-body">
+          <%= render "form", class_type: @class_type %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
