Add "My Classes" link to navigation for teachers in application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,9 @@
             <% if user_signed_in? %>
               <% if current_user.teacher? %>
                 <li class="nav-item">
+                  <%= link_to "My Classes", classrooms_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
                   <%= link_to "My Calendar", calendar_teacher_path(current_user.teacher), class: "nav-link" %>
                 </li>
                 <li class="nav-item">
